[package]
name = "provider"
version = "0.1.0"
description = "Overlock Provider"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "provider"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

